--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,10 @@
   --color-form-border: #747272;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -960,6 +964,7 @@ footer::after {
   }
 }
 .section-location__map {
+  display: none;
   border: none;
   height: 176px;
   margin: 0 -20px;
@@ -974,10 +979,23 @@ footer::after {
 }
 @media screen and (min-width: 1280px) {
   .section-location__map {
+    display: block;
     margin: auto;
     width: 605px;
     height: 480px;
     border-radius: 32px;
+  }
+}
+.section-location__map-mobile {
+  display: block;
+  width: 100%;
+  max-height: 100%;
+  height: 450px;
+  border: none;
+}
+@media screen and (min-width: 1280px) {
+  .section-location__map-mobile {
+    display: none;
   }
 }
 .section-location__form {
@@ -1002,7 +1020,12 @@ footer::after {
 }
 
 .section-location.section {
-  padding-bottom: 94px;
+  padding-bottom: 0px;
+}
+@media screen and (min-width: 1280px) {
+  .section-location.section {
+    padding-bottom: 94px;
+  }
 }
 
 .mobile-menu {
@@ -1027,11 +1050,29 @@ footer::after {
 .mobile-menu.is-open {
   -webkit-transform: translateX(0);
           transform: translateX(0);
+  z-index: 100;
+}
+.mobile-menu__container {
+  padding: 20px;
+}
+.mobile-menu__logo {
+  margin-bottom: 32px;
+}
+.mobile-menu__list .link {
+  margin-bottom: 16px;
+}
+.mobile-menu__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 25px;
 }
 .mobile-menu__btn-close {
   position: absolute;
-  top: 16px;
-  right: 24px;
+  top: 25px;
+  right: 25px;
+  background-color: transparent;
+  border: none;
 }
 
 .backdrop {
