--- a/scss/layouts/_location-section.scss
+++ b/scss/layouts/_location-section.scss
@@ -17,6 +17,7 @@
   }
 
   &__map {
+    display: none;
     border: none;
     height: 176px;
     margin: 0 -20px;
@@ -28,10 +29,22 @@
     }
 
     @media screen and (min-width: $bp-desktop) {
+      display: block;
       margin: auto;
       width: 605px;
       height: 480px;
       border-radius: 32px;
+    }
+
+    &-mobile {
+      display: block;
+      width: 100%;
+      max-height: 100%;
+      height: 450px;
+      border: none;
+      @media screen and (min-width: $bp-desktop) {
+        display: none;
+      }
     }
   }
 
@@ -59,5 +72,8 @@
 }
 
 .section-location.section {
-  padding-bottom: 94px;
+  padding-bottom: 0px;
+  @media screen and (min-width: $bp-desktop) {
+    padding-bottom: 94px;
+  }
 }
