--- a/scss/layouts/_mobile-menu.scss
+++ b/scss/layouts/_mobile-menu.scss
@@ -14,11 +14,31 @@
 
   &.is-open {
     transform: translateX(0);
+    z-index: 100;
+  }
+
+  &__container {
+    padding: 20px;
+  }
+
+  &__logo {
+    margin-bottom: 32px;
+  }
+
+  &__list .link {
+    margin-bottom: 16px;
+  }
+
+  &__social {
+    display: flex;
+    gap: 25px;
   }
 
   &__btn-close {
     position: absolute;
-    top: 16px;
-    right: 24px;
+    top: 25px;
+    right: 25px;
+    background-color: transparent;
+    border: none;
   }
 }
