--- a/css/main.css
+++ b/css/main.css
@@ -1110,13 +1110,27 @@ footer::after {
   position: relative;
   width: 100%;
   height: 100%;
-  max-width: 765px;
-  max-height: 680px;
-  padding: 42px 144px;
+  max-width: 450px;
+  max-height: 550px;
+  padding: 22px 88px;
   background-color: var(--color-primary-blue);
   background-image: url(../img/modal-bg.png);
   border-radius: 48px;
   overflow-y: auto;
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    max-width: 620px;
+    max-height: 450px;
+    padding: 38px 120px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .modal {
+    max-width: 765px;
+    max-height: 680px;
+    padding: 42px 144px;
+  }
 }
 .modal-btn-close {
   position: absolute;
@@ -1134,17 +1148,30 @@ footer::after {
 }
 .modal__title {
   font-family: "Play";
-  font-size: 64px;
+  font-size: 38px;
   color: var(--color-primary-light);
   text-align: center;
-  font-weight: 700;
-  line-height: 1.15;
-  margin-bottom: 8px;
+  font-weight: 400;
+  margin-bottom: 4px;
+}
+@media screen and (min-width: 1280px) {
+  .modal__title {
+    font-size: 64px;
+    font-weight: 700;
+    margin-bottom: 8px;
+    line-height: 1.15;
+  }
 }
 .modal__text {
   text-align: center;
   color: var(--color-primary-light);
   margin-bottom: 32px;
+  font-size: 14px;
+}
+@media screen and (min-width: 1280px) {
+  .modal__text {
+    font-size: 18px;
+  }
 }
 
 .form__field.modal-form__field {
