--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -21,13 +21,25 @@
   position: relative;
   width: 100%;
   height: 100%;
-  max-width: 765px;
-  max-height: 680px;
-  padding: 42px 144px;
+  max-width: 450px;
+  max-height: 550px;
+  padding: 22px 88px;
   background-color: var(--color-primary-blue);
   background-image: url(../img/modal-bg.png);
   border-radius: 48px;
   overflow-y: auto;
+
+  @media screen and (min-width: $bp-tablet) {
+    max-width: 620px;
+    max-height: 450px;
+    padding: 38px 120px;
+  }
+
+  @media screen and (min-width: $bp-desktop) {
+    max-width: 765px;
+    max-height: 680px;
+    padding: 42px 144px;
+  }
 
   &-btn-close {
     position: absolute;
@@ -46,18 +58,29 @@
 
   &__title {
     font-family: 'Play';
-    font-size: 64px;
+    font-size: 38px;
     color: var(--color-primary-light);
     text-align: center;
-    font-weight: 700;
-    line-height: 1.15;
-    margin-bottom: 8px;
+    font-weight: 400;
+    margin-bottom: 4px;
+
+    @media screen and (min-width: $bp-desktop) {
+      font-size: 64px;
+      font-weight: 700;
+      margin-bottom: 8px;
+      line-height: 1.15;
+    }
   }
 
   &__text {
     text-align: center;
     color: var(--color-primary-light);
     margin-bottom: 32px;
+    font-size: 14px;
+
+    @media screen and (min-width: $bp-desktop) {
+      font-size: 18px;
+    }
   }
 }
 
